# NICP

./: .gitignore  CMakeLists.txt  README.md
nicp/nicp/: CMakeLists.txt  aligner2d.cpp  aligner2d.h  alignernn.cpp  alignerprojective.cpp  cloud.h  correspondencefinder.h  correspondencefindernn.cpp  correspondencefinderprojective.cpp  hello.cpp  informationmatrix.h  informationmatrixcalculator.cpp  informationmatrixcalculator.h  linearizer.cpp  linearizer.h  nicp_depth_image_registration.cpp  nicp_nn_depth_image_registration.cpp  nicp_nn_pcl_registration.cpp  pclcloudconverter.cpp  pclcloudconverter.h  statscalculatorintegralimage.h
